--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ContactListDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection":  "Server=uiap-s-test-01v;Database=Training_2025;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
